# loom-oss

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  OPEN-CORE.md  README.md  SECURITY.md  SELF-HOSTING.md  SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
cli/: README.md  pyproject.toml
cli/loom/: __init__.py  __main__.py  admin.html  admin.py  cli.py  config.py  contract.py  dockercmd.py  dockerfiles.py  gateway.py  harvester.py  library.py  manifest.py  mcp_server.py  proxy.py  registry.py  services.py  util.py
cli/loom/targets/: __init__.py  base.py  local.py
cli/tests/: test_admin.py  test_federation.py  test_library.py  test_manifest_contract.py  test_mcp.py  test_sdk.py  test_services.py
docs/: app-contract.md
examples/analytics-consumer/: app.py  fleet.app.yaml  loom_sdk.py
examples/capability-demo/: fleet.app.yaml  package.json  server.js
examples/data-consumer/: app.py  fleet.app.yaml
examples/data-provider/: app.py  fleet.app.yaml
examples/hello-clock/: fleet.app.yaml  index.html
examples/hello-gated/: fleet.app.yaml  index.html
examples/hello-static/: fleet.app.yaml  index.html
examples/hello-web/: fleet.app.yaml  package.json  server.js
examples/llm-consumer/: app.py  fleet.app.yaml  loom_sdk.py
examples/loom-analytics/: app.py  fleet.app.yaml
examples/loom-fed/: app.py  fleet.app.yaml
examples/loom-llm/: app.py  fleet.app.yaml
examples/loom-wallet/: app.py  fleet.app.yaml
examples/wallet-consumer/: app.py  fleet.app.yaml
proxy/: docker-compose.yml
proxy/certs/: .gitignore
sdk/python/: loom_sdk.py
