[project]
name = "loom-cli"
version = "0.1.0"
description = "Loom — an agent-native, additive app host. Deploy small apps; each is instantly routed, discoverable, agent-callable, and service-consuming."
authors = [{ name = "Jon Hammant" }]
license = { text = "BUSL-1.1" }
requires-python = ">=3.9"
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
loom = "loom.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["loom", "loom.targets"]
